test/modules/vass/use-depth.good
use-depth.chpl:21: error: Symbol x multiply defined
use-depth.chpl:37: error: Symbol x multiply defined
